db connection changed

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 baseurl = https://showmanblogs.netlify.app/
-dbPassword = "mysql"
+connectionstring = "mysql://root:NcYhIzJPfmgPsvzMTwLMkSFQcrNXqADh@autorack.proxy.rlwy.net:34856/railway"
+dbuser = "root"
+dbPassword = "NcYhIzJPfmgPsvzMTwLMkSFQcrNXqADh"
+dbport = 34856
+db = "railway"
