--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-baseurl = https://showmanblogs.netlify.app/
+baseurl = https://showmanblogs.netlify.app
 connectionstring = "mysql://root:NcYhIzJPfmgPsvzMTwLMkSFQcrNXqADh@autorack.proxy.rlwy.net:34856/railway"
 dbuser = "root"
 dbPassword = "NcYhIzJPfmgPsvzMTwLMkSFQcrNXqADh"
